--- a/src/app/servers/server/server.component.html
+++ b/src/app/servers/server/server.component.html
@@ -1,2 +1,3 @@
-<h5>{{ server.name }}</h5>
-<p>Server status is {{ server.status }}</p>
+<h4>{{ serverName }}</h4>
+<p> Status is {{ serverStatus }} </p>
+<button class="btn btn-primary" (click)="onEdit()">Edit Server</button>
