--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -3,7 +3,7 @@
     <div class="list-group">
       <a
         [routerLink]="['/servers', server.id]"
-        [queryParams]="{allowEdit: '1'}"
+        [queryParams]="{allowEdit: server.id === 3 ? '1' : '0'}"
         fragment="loading"
         class="list-group-item"
         *ngFor="let server of servers">
@@ -15,4 +15,3 @@
     <router-outlet></router-outlet>
   </div>
 </div>
-
